@@ -1,4 +1,5 @@
 Development
+    Apple HD trailer fixes
     Don't make the link active in the about dialog if we are using gtk < 2.14
     Updated zh_CN translation from launchpad
     Add configure flag for flat volume
